# django-ninja-extra-demo

./: Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  schemas.py
demo_app/: admin.py  api.py  models.py  schemas.py
demo_app/migrations/: 0001_initial.py
demo_app/tests/: conftest.py  test_api.py
project/: api.py  settings.py  urls.py
scripts/: format.sh  install-psycopg2-dependencies.sh  lint.sh  test.sh
